First commited as before_69407_rev5